--- a/pages/zoos/styles/style.css
+++ b/pages/zoos/styles/style.css
@@ -89,7 +89,7 @@ html {
 .header-container__search {
   width: 32px;
   height: 32px;
-  background-image: url(../../assets/icons/search.svg);
+  background-image: url(../../../assets/icons/search.svg);
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
@@ -132,7 +132,7 @@ html {
 
 .header-container__btn {
   display: none;
-  background: url(../../assets/icons/menu.svg) center no-repeat;
+  background: url(../../../assets/icons/menu.svg) center no-repeat;
   width: 35px;
   height: 35px;
 }
@@ -185,6 +185,10 @@ html {
   color: #0d444d;
 }
 
+.main-section {
+  margin-top: 100px;
+}
+
 .aside-link {
   position: relative;
   display: -webkit-box;
@@ -204,8 +208,8 @@ html {
 }
 
 .aside-link__img {
-  z-index: 1;
   width: 76px;
+  z-index: 1;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
@@ -287,12 +291,22 @@ html {
 }
 
 .maincam-card__btn:first-child {
-  background: url(../../assets/icons/i.svg) center no-repeat;
+  background: url(../../../assets/icons/i.svg) center no-repeat;
   margin-right: 25px;
 }
 
+.maincam-card__btn:first-child:hover {
+  background: #c5e1e5 url(../../../assets/icons/i.svg) center no-repeat;
+  border-radius: 20px;
+}
+
 .maincam-card__btn:last-child {
-  background: url(../../assets/icons/Bttn.svg) center no-repeat;
+  background: url(../../../assets/icons/Bttn.svg) center no-repeat;
+}
+
+.maincam-card__btn:last-child:hover {
+  background: #c5e1e5 url(../../../assets/icons/Bttn.svg) center no-repeat;
+  border-radius: 20px;
 }
 
 .maincam-subtitle {
@@ -352,14 +366,28 @@ html {
 
 .sidecam-container__listener-btn {
   width: 52px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.sidecam-container__listener-btn:hover {
+  border-radius: 50px;
 }
 
 .sidecam-container__listener-btn:first-child {
-  background: url(../../assets/icons/next.svg) no-repeat center;
+  background: url(../../../assets/icons/next.svg) no-repeat center;
+}
+
+.sidecam-container__listener-btn:first-child:hover {
+  background: #c5e1e5 url(../../../assets/icons/next.svg) no-repeat center;
 }
 
 .sidecam-container__listener-btn:last-child {
-  background: url(../../assets/icons/perv.svg) no-repeat center;
+  background: url(../../../assets/icons/perv.svg) no-repeat center;
+}
+
+.sidecam-container__listener-btn:last-child:hover {
+  background: #c5e1e5 url(../../../assets/icons/perv.svg) no-repeat center;
 }
 
 .information {
@@ -413,7 +441,7 @@ html {
 }
 
 .facts-card {
-  list-style: url(../../assets/icons/facts.svg);
+  list-style: url(../../../assets/icons/facts.svg);
 }
 
 .facts-text {
@@ -423,11 +451,11 @@ html {
 }
 
 .donate {
-  background: url(../../assets/images/Donate-illustrations.png) center no-repeat;
+  background: url(../../../assets/images/Donate-illustrations.png) center no-repeat;
   display: block;
   margin: auto;
   height: 520px;
-  width: 1920px;
+  max-width: 1920px;
   margin-bottom: -87px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -435,12 +463,11 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  position: relative;
+  z-index: 2;
 }
 
 .donate-btn {
-  position: absolute;
-  top: 310px;
+  margin-top: 310px;
   width: 356px;
   height: 52px;
   border-radius: 50px;
@@ -472,6 +499,10 @@ html {
           align-items: center;
   width: 1920px;
   padding: 0 220px;
+  -ms-grid-columns: 100px 1fr;
+      grid-template-columns: 100px 1fr;
+  -ms-grid-rows: (auto)[2];
+      grid-template-rows: repeat(2, auto);
 }
 
 .footer-wrapper {
@@ -487,11 +518,26 @@ html {
   background: #2a8086;
 }
 
+.footer-nav {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  max-width: 530px;
+}
+
 .footer-container {
-  padding-left: 220px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
