--- a/pages/zoos/styles/style.scss
+++ b/pages/zoos/styles/style.scss
@@ -73,7 +73,7 @@ html {
         &__search {
             width: 32px;
             height: 32px;
-            background-image: url(../../assets/icons/search.svg);
+            background-image: url(../../../assets/icons/search.svg);
             @include slowTrans;
             &:hover {
                 filter: drop-shadow(0 0 10px $tertiary);
@@ -104,7 +104,7 @@ html {
         }
         &__btn {
             display: none;
-            background: url(../../assets/icons/menu.svg) center no-repeat;
+            background: url(../../../assets/icons/menu.svg) center no-repeat;
             width: 35px;
             height: 35px;
         }
@@ -143,6 +143,10 @@ html {
     }
 }
 
+.main-section {
+    margin-top: 100px;
+}
+
 .aside {
     &-link {
         position: relative;
@@ -154,8 +158,8 @@ html {
             z-index: 0;
         }
         &__img {
-            z-index: 1;
             width: 76px;
+            z-index: 1;
             @include slowTrans;
             &:hover {
                 opacity: 0.6;
@@ -209,11 +213,19 @@ html {
             width: 42px;
             height: 42px;
             &:first-child {
-                background: url(../../assets/icons/i.svg) center no-repeat;
+                background: url(../../../assets/icons/i.svg) center no-repeat;
                 margin-right: 25px;
+                &:hover {
+                    background: $tertiary url(../../../assets/icons/i.svg) center no-repeat;
+                    border-radius: 20px;
+                }
             }
             &:last-child {
-                background: url(../../assets/icons/Bttn.svg) center no-repeat;
+                background: url(../../../assets/icons/Bttn.svg) center no-repeat;
+                &:hover {
+                    background: $tertiary url(../../../assets/icons/Bttn.svg) center no-repeat;
+                    border-radius: 20px;
+                }
             }
         }
     }
@@ -255,11 +267,21 @@ html {
             height: 104px;
             &-btn {
                 width: 52px;
+                @include slowTrans;
+                &:hover {
+                    border-radius: 50px;
+                }
                 &:first-child {
-                    background: url(../../assets/icons/next.svg) no-repeat center;
+                    background: url(../../../assets/icons/next.svg) no-repeat center;
+                    &:hover {
+                        background: $tertiary url(../../../assets/icons/next.svg) no-repeat center;
+                    }
                 }
                 &:last-child {
-                    background: url(../../assets/icons/perv.svg) no-repeat center;
+                    background: url(../../../assets/icons/perv.svg) no-repeat center;
+                    &:hover {
+                        background: $tertiary url(../../../assets/icons/perv.svg) no-repeat center;
+                    }
                 }
             }
         }
@@ -307,7 +329,7 @@ html {
         row-gap: 20px;
     }
     &-card {
-        list-style: url(../../assets/icons/facts.svg);
+        list-style: url(../../../assets/icons/facts.svg);
     }
     &-text {
         font-size: 14px;
@@ -317,15 +339,16 @@ html {
 }
 
 .donate {
-    background: url(../../assets/images/Donate-illustrations.png) center no-repeat;
+    background: url(../../../assets/images/Donate-illustrations.png) center no-repeat;
     display: block;
     margin: auto;
     height: 520px;
-    width: 1920px;
+    max-width: 1920px;
     margin-bottom: -87px;
     display: flex;
     justify-content: center;
     z-index: 2;
+
     &-btn {
         margin-top: 310px;
         width: 356px;
@@ -352,18 +375,25 @@ html {
     align-items: center;
     width: 1920px;
     padding: 0 220px;
-    background: $primary;
+    grid-template-columns: 100px 1fr;
+    grid-template-rows: repeat(2, auto);
     &-wrapper {
-        z-index: 5;
+        background: #196469;
         height: 200px;
         width: 100%;
         display: flex;
         justify-content: center;
         background: $primary;
     }
+    &-nav {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+        max-width: 530px;
+    }
     &-container {
-        padding-left: 220px;
         display: flex;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
         flex-direction: column;
         margin-left: auto;
     }
